--- a/index.html
+++ b/index.html
@@ -814,9 +814,9 @@ a:visited {
 
 <div class="footergreen">
 <p style="text-align : left; padding-left : 16px;">
-Instagram : <br>
-Facebook : <br>
-WA : <br>
+Instagram : @cyber_holic <br>
+Facebook : Weeb Chronos<br>
+WA : 08989019089<br>
 </p>
 <br>
 </div>
