--- a/pages/tshirt-fate.html
+++ b/pages/tshirt-fate.html
@@ -321,7 +321,7 @@ a:visited {
 
 
 <!--FATE-->
-
+<a href="tshirt-fcs.html">
       <div class="container">
         <img src="../asset_template/template.png" alt="Katalog" style="width:500px;">
 
@@ -335,7 +335,7 @@ a:visited {
 
 
           <div class="centeredlogosideright">
-            <img src="../asset_logo/fgo-command/3.png"; alt="asset_logo/<br />
+            <img src="../asset_logo/commandsp/3/3.png"; alt="asset_logo/<br />
 <b>Notice</b>:  Undefined variable: j in <b>C:\xampp\htdocs\Katalog\pages\tshirt-fate.html</b> on line <b>87</b><br />
 .png" class="landscape">
           </div>
@@ -351,7 +351,7 @@ a:visited {
 
 
           <div class="centeredlogo">
-            <img src="../asset_logo/fgo-command/2.png"; alt="asset_logo/<br />
+            <img src="../asset_logo/commandsp/2/2.png"; alt="asset_logo/<br />
 <b>Notice</b>:  Undefined variable: j in <b>C:\xampp\htdocs\Katalog\pages\tshirt-fate.html</b> on line <b>99</b><br />
 .png" class="landscape">
           </div>
@@ -367,7 +367,7 @@ a:visited {
 
 
           <div class="centeredlogosideleft">
-            <img src="../asset_logo/fgo-command/1.png"; alt="asset_logo/<br />
+            <img src="../asset_logo/commandsp/1/1.png"; alt="asset_logo/<br />
 <b>Notice</b>:  Undefined variable: j in <b>C:\xampp\htdocs\Katalog\pages\tshirt-fate.html</b> on line <b>111</b><br />
 .png" class="landscape">
           </div>
@@ -381,7 +381,7 @@ a:visited {
           <div class="kode">
             <p style="font-size: 20px;">
                   
-                  Fate Command Seal
+                  Fate Command Spell & Others
            </p>
          
           </div>
@@ -396,7 +396,7 @@ a:visited {
       </div>
 
 
-
+</a>
 
 
 
@@ -416,9 +416,9 @@ a:visited {
 
 <div class="footergreen">
 <p style="text-align : left; padding-left : 16px;">
-Instagram : <br>
-Facebook : <br>
-WA : <br>
+Instagram : @cyber_holic <br>
+Facebook : Weeb Chronos<br>
+WA : 08989019089<br>
 </p>
 <br>
 </div>
