--- a/pages/tshirt-fate.html
+++ b/pages/tshirt-fate.html
@@ -381,7 +381,7 @@ a:visited {
           <div class="kode">
             <p style="font-size: 20px;">
                   
-                  Fate Command Spell & Others
+                  Command Spells & Seals
            </p>
          
           </div>
